feat: implementar cortes y relaciones
